// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@vgerbot/channel-transformer should be able to detect the module alias 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
const channel = new Channel();
channel.rclass();
{ }
"
`;

exports[`@vgerbot/channel-transformer should be able to exclude methods calling that has more than 2 arguments 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
const channel = new Channel();
channel.rclass('RemoteAPI1', class {
    method() { }
});
{ }
"
`;

exports[`@vgerbot/channel-transformer should be able to exclude methods without type arguments 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
const channel_1 = require(\\"@vgerbot/channel\\");
const channel = new channel_1.Channel();
channel.rclass('RemoteAPI', class RemoteAPI {
    method() { }
});
"
`;

exports[`@vgerbot/channel-transformer should be able to reference the class 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
const channel_1 = require(\\"@vgerbot/channel\\");
const channel = new channel_1.Channel();
channel.rclass(\\"RemoteAPI\\", RemoteAPI);
class RemoteAPI {
    method() { }
}
"
`;

exports[`@vgerbot/channel-transformer should be able to transform the absrtact class 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
const channel_1 = require(\\"@vgerbot/channel\\");
const channel = new channel_1.Channel();
channel.rclass(\\"RemoteAPI\\", class RemoteAPIImpl_1 {
    method() { }
    method2() { }
});
class RemoteAPI {
    method() { }
}
"
`;

exports[`@vgerbot/channel-transformer should run normally with the transformer 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.x = void 0;
const channel_1 = require(\\"@vgerbot/channel\\");
exports.x = 'string';
console.info(channel_1.Channel);
"
`;

exports[`@vgerbot/channel-transformer should transform the interface parameter correctly 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
const channel_1 = require(\\"@vgerbot/channel\\");
const channel = new channel_1.Channel();
channel.rclass(\\"RemoteAPI\\", class RemoteAPIImpl_1 {
    method() { }
});
{ }
"
`;
